# remove_ros_VINS-position-constraint

./: CMakeLists.txt  README  estimator.cpp  estimator.h  feature_tracker.cpp  gps2.txt  main.cpp  parameters.cpp  parameters.h
config/euroc/: euroc_config.yaml  euroc_config_no_extrinsic.yaml
factor/: gps_factor.h  marginalization_factor.cpp  marginalization_factor.h
initial/: initial_sfm.cpp
